--- a/assets/styles.css
+++ b/assets/styles.css
@@ -102,6 +102,10 @@ body {
   box-shadow: 2px 2px 2px lightgrey;
 }
 
+.mini_filter {
+  margin: 10px;
+}
+
 #right-column {
   display: flex;
   flex-direction: column;
