--- a/assets/styles.css
+++ b/assets/styles.css
@@ -106,16 +106,24 @@ body {
   margin: 10px;
 }
 
-#right-column {
+.multi_filter {
+  justify-content: space-between;
+}
+
+.right-column {
   display: flex;
   flex-direction: column;
+}
+
+.auto_width{
+  width: auto;
 }
 
 #wells {
   flex: 1;
 }
 
-#gas {
+.flex-1 {
   flex: 1;
 }
 
